test/samples/error/err_vector_required_but_string_given.w
var x = [1,2,3]
x ="cat"
print(x)